// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows empty conditions 1`] = `
Object {
  "_condition": "",
  "_type": "if",
  "id": Any<String>,
}
`;

exports[`basic condition works 1`] = `
Object {
  "_condition": "a === b",
  "_type": "if",
  "id": Any<String>,
}
`;
